1.6.0.0 Changelog
Update to game version 1.20.2.
Update to Minecraft Forge version 48.1.0.
Update to Parchment mapping version 2023.12.10-1.20.2.
Update method/API calls to enable building.

TODO:
Shorten/soften quail sounds.
Re-implement mod creative inventory tab using updated API.
Add quail type for pottery sherds, torchflowers, pitcher plants, and cherry trees.
Consider rebalancing.