@@ -36,11 +36,11 @@
   "breesources.subtitle.quail_plop": "Quail plops",
   "breesources.subtitle.quail_milk": "Quail milked",
   "text.breesources.multiplier": "%s x%d",
-  "text.breesources.stat.amount": "Egg Amount Modifier: x%.3f",
-  "text.breesources.stat.amountRandom": "Egg Amount Modifier Variation: x%.3f",
-  "text.breesources.stat.time": "Egg Cooldown Modifier: x%.3f",
-  "text.breesources.stat.timeRandom": "Egg Cooldown Modifier Variation: x%.3f",
-  "text.breesources.stat.eggTimer": "Time Until Next Egg: %02d:%02d",
+  "text.breesources.stat.amount": "Egg Amount Modifier: x%s",
+  "text.breesources.stat.amountRandom": "Egg Amount Modifier Variation: x%s",
+  "text.breesources.stat.time": "Egg Cooldown Modifier: x%s",
+  "text.breesources.stat.timeRandom": "Egg Cooldown Modifier Variation: x%s",
+  "text.breesources.stat.eggTimer": "Time Until Next Egg: %s",
   "text.breesources.empty": "Empty",
   "text.breesources.onetime": "One-time use",
   "text.breesources.breed.painted": "Painted Quail",
